// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render color 1`] = `
<div
  class="wp-components-badge css-1hsys2h"
  data-g2-c16t="true"
  data-g2-component="Badge"
>
  <span
    class="wp-components-truncate wp-components-text css-11d0kjz"
    data-g2-c16t="true"
    data-g2-component="Text"
  >
    Status
  </span>
</div>
`;

exports[`props should render correctly 1`] = `
<div
  class="wp-components-badge css-rntp66"
  data-g2-c16t="true"
  data-g2-component="Badge"
>
  <span
    class="wp-components-truncate wp-components-text css-11d0kjz"
    data-g2-c16t="true"
    data-g2-component="Text"
  >
    Status
  </span>
</div>
`;

exports[`props should render display 1`] = `
<div
  class="wp-components-badge css-6lrtoq"
  data-g2-c16t="true"
  data-g2-component="Badge"
>
  <span
    class="wp-components-truncate wp-components-text css-11d0kjz"
    data-g2-c16t="true"
    data-g2-component="Text"
  >
    Status
  </span>
</div>
`;

exports[`props should render isBold 1`] = `
<div
  class="wp-components-badge css-1m7sh7q"
  data-g2-c16t="true"
  data-g2-component="Badge"
>
  <span
    class="wp-components-truncate wp-components-text css-11d0kjz"
    data-g2-c16t="true"
    data-g2-component="Text"
  >
    Status
  </span>
</div>
`;

exports[`props should render isRounded 1`] = `
<div
  class="wp-components-badge css-iiaoyy"
  data-g2-c16t="true"
  data-g2-component="Badge"
>
  <span
    class="wp-components-truncate wp-components-text css-11d0kjz"
    data-g2-c16t="true"
    data-g2-component="Text"
  >
    Status
  </span>
</div>
`;

exports[`props should render truncate 1`] = `
<div
  class="wp-components-badge css-rntp66"
  data-g2-c16t="true"
  data-g2-component="Badge"
>
  <span
    class="wp-components-truncate wp-components-text css-11d0kjz"
    data-g2-c16t="true"
    data-g2-component="Text"
  >
    Status
  </span>
</div>
`;
